--- a/.gitignore
+++ b/.gitignore
@@ -14,10 +14,10 @@ dist/
 downloads/
 eggs/
 .eggs/
-vscode/
-.vscode/
-__pycache__/
-.idea/
+/.vscode/
+/__pycache__/
+/.idea/
+/target/
 lib/
 lib64/
 parts/
